--- a/CSS/main.css
+++ b/CSS/main.css
@@ -8,7 +8,7 @@
     height: 5000px;
     margin-left: auto;
     margin-right: auto;
-    background-color: firebrick;
+    background-color: lightgray;
 }
 
 /* Header / Plant overview */
@@ -18,7 +18,7 @@
     height: 100%;
     left: 0px;
     top: 0px;
-    background-color: royalblue;
+    border: 2px solid blue;
     overflow-x: scroll;
 }
 
@@ -35,6 +35,7 @@
     position: relative;
     display: inline-block;
     left: 10px;
+    margin-right: 15px;
     top: 8px;
     border: 2px solid red;
     width: 75px;
@@ -43,6 +44,31 @@
     border-radius: 50%;
     overflow: hidden;
     
+}
+
+.circleTxt {
+    position: absolute;
+    text-align: center;
+    width: 94px;
+    height: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: 200;
+    top: 90px;
+}
+
+#newMemberC {
+    position: relative;
+    display: inline-block;
+    left: 10px;
+    margin-right: 15px;
+    top: 8px;
+    border: 5px solid gray;
+    width: 73px;
+    height: 73px;
+    background-color: lightgray;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 /* My plant */
@@ -67,4 +93,7 @@
     background-color: pink;
     border-radius: 50%;
     overflow: hidden;
+}
+
+#myPlantTxt {
 }
