--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,6 +2,10 @@
     margin: 0px 0px 0px 0px;
 }
 
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #mainDiv {
     position: relative;
     width: 1336px;
@@ -127,6 +131,8 @@
     background-color: white;
 }
 
+/* BODY */
+
 #bodyDiv {
     position: absolute;
     width: 1336px;
@@ -154,7 +160,6 @@
     margin-right: 5px;
     width: 265px;
     height: 500px;
-    background-color: #b6ccbb;
     display: inline-block;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -164,8 +169,21 @@
     font-size: 30px;
     font-weight: bold;
     padding-top: 15px;
-    border-radius: 20px;
+    border-radius: 10px;
+    border-top: 3px solid #c2d8c7; 
+    border-left: 3px solid #c2d8c7;
     border-right: 5px solid #99ad9d;
     border-bottom: 5px solid #99ad9d;
     z-index: -2;
 }
+
+    /* Feed */
+    #feedDiv {
+        position: absolute;
+        right: 0px;
+        top: 175px;
+        width: 300px;
+        height: 500px;
+        background-color: lightgray;
+        
+    }
