--- a/CSS/main.css
+++ b/CSS/main.css
@@ -12,6 +12,7 @@ h1 {
     height: 700px;
     margin-left: auto;
     margin-right: auto;
+    overflow: hidden;
 }
 
 /* Header / Plant overview */
@@ -184,10 +185,12 @@ h1 {
     /* Feed */
     #feedDiv {
         position: absolute;
-        right: 0px;
-        top: 175px;
+        right: -30px;
+        top: 180px;
         width: 300px;
         height: 500px;
         background-color: lightgray;
+        border-radius: 20px;
         z-index: -1;
+        padding: 20px;
     }
