--- a/CSS/main.css
+++ b/CSS/main.css
@@ -191,3 +191,26 @@ h1 {
         background-color: lightgray;
         z-index: -1;
     }
+
+
+
+    #createTask{
+        background-color: rgb(169,169,169,0.5);
+        width: 50px;
+        height: 50px;
+    }
+
+    #createMenu{
+        background-color: rgb(169,169,169,1);
+        position: absolute;
+        width: 500px;
+        height: 600px;
+        left: 400px;
+        top: 250px;
+        text-align: center;
+    }
+
+    #createMenu h1{
+        margin: 20px;
+        text-align: center;
+    }
