--- a/CSS/main.css
+++ b/CSS/main.css
@@ -31,7 +31,7 @@ h1 {
     top: 0px;
     width: 8%;
     height: 120px;
-    border-bottom: 3px solid rgb(210, 210, 210);
+    border-bottom: 3px solid #4c794a;
     background-color: white;
 }
 
@@ -41,7 +41,7 @@ h1 {
     width: 84%;
     left: 8%;
     top: 0px;
-    border-bottom: 3px solid rgb(210, 210, 210);
+    border-bottom: 3px solid #4c794a;
     overflow-x: scroll;
     white-space: nowrap;
     background-color: white;
@@ -115,15 +115,15 @@ h1 {
     right: 0px;
     left: 92%;
     top: 0px;
-    border-bottom: 3px solid rgb(210, 210, 210);
+    border-bottom: 3px solid #4c794a;
     border-left: 1px solid rgb(210, 210, 210);
     background-color: rgb(244, 244, 244);
 }
 
 #myPlantCircle {
     position: absolute;
-    top: 6% ;
-    margin-left: 12%;
+    top: 20px;
+    margin-left: 50px;
     border: 2px solid #68c959;
     width: 75px;
     height: 75px;
@@ -151,19 +151,50 @@ h1 {
     top: 123px;
     padding-top: 8px;
     padding-left: 5px;
-    background-color: rgb(244, 244, 244);
-    border-bottom: 3px solid rgb(210, 210, 210);
+    background-color: #e1f0e0;
+    border-bottom: 3px solid #4c794a;
 }
-#progressBoard {
+
+#progressTxtDivs {
+    position: absolute;
+    left: 0;
+    top: 50px;
     width: 900px;
+    height: 40px;
+
+}
+
+
+.progressTxt {
+    position: relative;
+    display: inline-block;
+    padding-left: 25px;
+    padding-top: 10px;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    color: #4c794a;
+    
+}
+
+#txtBox1 {
+    padding-right: 175px;
+}
+
+#txtBox2 {
+    padding-right: 62px;
+}
+
+#progressBoard {
+    width: 1000px;
 }
 
 .progressColumns {
     position: absolute;
-    margin-top: 60px;
+    margin-top: 100px;
     margin-left: 20px;
     margin-right: 5px;
-    width: 265px;
+    width: 290px;
     height: 500px;
     display: inline-block;
     overflow-y: scroll;
@@ -172,39 +203,50 @@ h1 {
     color: gray;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-    font-weight: bold;
     padding-top: 15px;
-    border-radius: 10px;
-    border-top: 3px solid #c2d8c7; 
-    border-left: 3px solid #c2d8c7;
-    border-right: 5px solid #99ad9d;
-    border-bottom: 5px solid #99ad9d;
+    border-radius: 1px;
+    border: 1px solid black;
+
     z-index: 0;
 }
 
     /* Feed */
+
+    #feedHeader {
+        position: absolute;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 25px;
+        color: #4c794a;
+        top: 180px;
+        right: 256px;
+
+    }
     #feedDiv {
         position: absolute;
-        right: -30px;
-        top: 180px;
+        right: 20px;
+        top: 210px;
         width: 300px;
         height: 500px;
-        background-color: lightgray;
-        border-radius: 20px;
+        background-color: #e1f0e0;
+        font-weight: 200;
+        border: 2px solid #4c794a;
         z-index: -1;
     }
 
 .open-button{
-    background-color: #555;
-    color:white;
+    position: absolute;
+    right: 20px;
+    top: 100px;
+    border: 2px solid #4c794a;
+    background-color: #e1f0e0;
+    border-radius: 2px;
+    color:#4c794a;
     padding:16px 20px;
-    border:none;
     cursor:pointer;
-    opacity: 0.8;
-    position:fixed;
-    bottom:23px;
-    right:28px;
-    width:280px;
+    opacity: 1;
+    width: 305px;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 .form-popup{
@@ -245,7 +287,7 @@ h1 {
     cursor:pointer;
     width:100%;
     margin-bottom: 10px;
-    opacity: 0.8;
+    opacity: 0.7;
 }
 
 .form-container .cancel{
@@ -253,15 +295,12 @@ h1 {
 }
 
 .form-container .btn:hover, .open-button:hover{
-    opacity: 1;
+    opacity: 0.8;
 }
-
-
-
-
 
 #toDoColumn{
     text-align: center;
     overflow: auto;
     font-size: 12px;
+    cursor: grab;
 }
