--- a/CSS/main.css
+++ b/CSS/main.css
@@ -123,7 +123,7 @@ h1 {
 #myPlantCircle {
     position: absolute;
     top: 20px;
-    margin-left: 50px;
+    margin-left: 70px;
     border: 2px solid #68c959;
     width: 75px;
     height: 75px;
@@ -201,7 +201,6 @@ h1 {
     overflow-x: hidden;
     white-space: nowrap;
     border: 1px solid #4c794a;
-
     z-index: 0;
 }
 
@@ -303,7 +302,7 @@ h1 {
 .objectDiv {
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
-    left: 10px;
+    left: 8px;
     margin-top: 10px;
     padding-left: 10px;
     padding-top: 10px;
@@ -312,5 +311,10 @@ h1 {
     border: 2px solid #abc1a9;;
     overflow-y: scroll;
     border-radius: 10px;
-    
+    font-size: 12px;
+    color: #242424;
+}
+
+.objectDiv:hover {
+    cursor: grab;
 }
