--- a/CSS/main.css
+++ b/CSS/main.css
@@ -42,10 +42,10 @@ h1 {
     width: 84%;
     left: 8%;
     top: 0px;
-    border-bottom: 3px solid #4c794a;
     overflow-x: scroll;
     white-space: nowrap;
     background-color: white;
+    border-bottom: 2px solid #4c794a;
 }
 
 .circleDiv {
@@ -118,7 +118,6 @@ h1 {
     left: 92%;
     top: 0px;
     border-bottom: 3px solid #4c794a;
-    border-left: 1px solid rgb(210, 210, 210);
 }
 
 #myPlantCircle {
@@ -154,7 +153,7 @@ h1 {
     padding-top: 8px;
     padding-left: 5px;
     background-color: #e1f0e0;
-    border-bottom: 3px solid #4c794a;
+    border-bottom: 2px solid #4c794a;
 }
 
 #progressTxtDivs {
@@ -309,10 +308,13 @@ h1 {
     margin-top: 10px;
     padding-left: 10px;
     padding-top: 10px;
-    width: 260px;
-    height: 80px;
+    padding-right: 10px;
+    width: 250px;
+    min-height: 80px;
     border: 2px solid #abc1a9;;
     overflow-y: scroll;
+    overflow-wrap: break-word;
+    white-space: normal;
     border-radius: 10px;
     font-size: 12px;
     color: #242424;
