--- a/CSS/main.css
+++ b/CSS/main.css
@@ -152,7 +152,7 @@ h1 {
     top: 123px;
     padding-top: 8px;
     padding-left: 5px;
-    background-color: #e1f0e0;
+    background-color: #87AB98;
 }
 
 #progressTxtDivs {
@@ -222,7 +222,7 @@ h1 {
         top: 210px;
         width: 300px;
         height: 500px;
-        background-color: #e1f0e0;
+        background-color: #87AB98;
         font-weight: 200;
         border: 2px solid #4c794a;
         z-index: -1;
@@ -233,9 +233,9 @@ h1 {
     right: 20px;
     top: 100px;
     border: 2px solid #4c794a;
-    background-color: #e1f0e0;
+    background-color: #87AB98;
     border-radius: 2px;
-    color:#4c794a;
+    color:white;
     padding:16px 20px;
     cursor:pointer;
     opacity: 1;
@@ -300,6 +300,13 @@ h1 {
     cursor: grab;
 }
 
+.taskWrapper {
+    position: absolute;
+    background-color: teal;
+
+    
+}
+
 .objectDiv {
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
@@ -311,6 +318,7 @@ h1 {
     width: 250px;
     min-height: 80px;
     border: 2px solid #abc1a9;;
+    background-color: white;
     overflow-y: scroll;
     overflow-wrap: break-word;
     white-space: normal;
