--- a/CSS/main.css
+++ b/CSS/main.css
@@ -26,20 +26,21 @@ h1 {
     overflow: hidden;
 }
 
-#headerFunctionsDiv {
+#newMemberDiv {
     position: fixed; 
     left: auto;
     top: 0px;
-    width: 16%;
+    width: 8%;
     height: 120px;
+    border-bottom: 3px solid #4c794a;
     background-color: white;
 }
 
 #circleOverview {
     position: absolute;
     height: 120px;
-    width: 76%;
-    left: 16%;
+    width: 84%;
+    left: 8%;
     top: 0px;
     overflow-x: scroll;
     white-space: nowrap;
@@ -62,7 +63,6 @@ h1 {
     height: 75px;
     border-radius: 50%;
     overflow: hidden;
-    cursor: pointer;
     
 } 
 .circleTxt {
@@ -91,22 +91,6 @@ h1 {
     width: 75px;
     height: 75px;
     background-color: #eeeeee;
-    border-radius: 50%;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-#viewAllC {
-    position: relative;
-    display: inline-block;
-    left: 10px;
-    margin-right: 15px;
-    top: 8px;
-    border: 2px solid #b6b6b6;
-    width: 75px;
-    height: 75px;
-    background-image: url("../images/greenhouse.JPG");
-    background-size: 120px;
     border-radius: 50%;
     overflow: hidden;
     cursor: pointer;
@@ -391,7 +375,7 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.form-container{
+.member-container{
     max-width: 300px;
     padding: 10px;
     background-color: white;
