--- a/CSS/index.css
+++ b/CSS/index.css
@@ -120,6 +120,16 @@
   font-size: 18px;
   cursor: pointer;
 }
+
+#errorMsg {
+  position: absolute;
+  left: 836px;
+  top: 380px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  color: red;
+  opacity: 0;
+}
 .collapsible {
   margin-top: 380px;
   margin-left: 840px;
