--- a/CSS/main.css
+++ b/CSS/main.css
@@ -26,21 +26,20 @@ h1 {
     overflow: hidden;
 }
 
-#newMemberDiv {
+#headerFunctionsDiv {
     position: fixed; 
     left: auto;
     top: 0px;
-    width: 8%;
+    width: 16%;
     height: 120px;
-    border-bottom: 3px solid #4c794a;
     background-color: white;
 }
 
 #circleOverview {
     position: absolute;
     height: 120px;
-    width: 84%;
-    left: 8%;
+    width: 76%;
+    left: 16%;
     top: 0px;
     overflow-x: scroll;
     white-space: nowrap;
@@ -63,6 +62,7 @@ h1 {
     height: 75px;
     border-radius: 50%;
     overflow: hidden;
+    cursor: pointer;
     
 } 
 .circleTxt {
@@ -91,6 +91,22 @@ h1 {
     width: 75px;
     height: 75px;
     background-color: #eeeeee;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+#viewAllC {
+    position: relative;
+    display: inline-block;
+    left: 10px;
+    margin-right: 15px;
+    top: 8px;
+    border: 2px solid #b6b6b6;
+    width: 75px;
+    height: 75px;
+    background-image: url("../images/greenhouse.JPG");
+    background-size: 120px;
     border-radius: 50%;
     overflow: hidden;
     cursor: pointer;
@@ -364,7 +380,6 @@ h1 {
     cursor: grab;
 }
 
-
 .member-popup{
     display: none;
     position:fixed;
@@ -375,13 +390,13 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.member-container{
+ .form-container{
     max-width: 300px;
     padding: 10px;
     background-color: white;
 }
 
-.member-container input[type=text]{
+ .member-container input[type=text]{
     width: 80%;
     padding:15px;
     margin: 5px 0 22px 0;
@@ -389,8 +404,7 @@ h1 {
     background: #f1f1f1;
 }
 
-.member-container input[type=text]:focus{
+ .member-container input[type=text]:focus{
     background-color: #ddd;
     outline: none;
 }
-
