--- a/CSS/main.css
+++ b/CSS/main.css
@@ -297,17 +297,21 @@ h1 {
 .form-popup{
     display: none;
     position:fixed;
-    bottom: 130px;
+    top: 300px;
     right: 550px;
-    border: 3px solid #f1f1f1;
+    padding: 20px;
+    border: 2px solid #4c794a;
     z-index: 9;
+    background-color: white;
     font-family: Arial, Helvetica, sans-serif;
+    z-index: 1;
 }
 
 .form-container{
     max-width: 300px;
     padding: 10px;
     background-color: white;
+    z-index: 2;
 }
 
 
